--- a/style.css
+++ b/style.css
@@ -7,8 +7,22 @@
 
 #header {
 	text-align: center;
-	background-color: #b4d932;
+	background-color: #8BD343;
+	float: left;
+	width: 900px;
+	color: white;
 }
+
+#logo{
+	position: relative;
+	left: 0px;
+	top: 0px;
+}
+/* Try using
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	*/
 
 #content{
 padding: 10px;
@@ -18,7 +32,7 @@ width: 960px;
 #nav {
 	float: left;
 	width: 200px;
-	background-color: #a5cde6;
+	background-color: #8Bd343;
 	margin: 10px;
 	}
 
@@ -27,13 +41,17 @@ width: 960px;
 	margin-left: 10px;
 }
 
+#nav a{
+	text-decoration: none;
+	}
+
 #nav ul{
 	list-style-type: none;
-	background-color: #ddd;
 }
 
-#nav.selected{
+.selected{
 	font-weight: bold;
+	background-color: red;
 }
 
 #main {
@@ -48,5 +66,10 @@ background-color: #a5cde6;
 }
 
 #footer {
-	clear: left;
+	clear: both;
+	margin-left: 20px;
+
+h4{
+	color: blue;
+	font-size: 14px;
 }
