--- a/style.css
+++ b/style.css
@@ -73,3 +73,20 @@ h4{
 	color: blue;
 	font-size: 14px;
 }
+
+.remedy{
+    width: 300px;
+    height: 300px;
+    background: #fff;
+    float: left;
+    border-radius: 10px;
+    margin-top: 20px;
+    padding-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.remedy a{
+	text-decoration: none;
+	color: black;
+}
