--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h4{
 	font-size: 14px;
 }
 
-.remedy{
+.product{
     width: 300px;
     height: 300px;
     background: #fff;
@@ -86,7 +86,7 @@ h4{
     margin-right: 10px;
 }
 
-.remedy a{
+.product a{
 	text-decoration: none;
 	color: black;
 }
