--- a/style.css
+++ b/style.css
@@ -153,3 +153,12 @@ p.one:hover {
 	text-decoration: none;
 	color: black;
 }
+
+.h-img{
+	float: right;
+	width: 100px;
+	height: 90px;
+	position: relative;
+	right: 80px;
+	top: -70px;
+}
