--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 p{
 	font-family: cursive;
 }
+body{
+	background-image: url("images/background2.jpg");
+	background-size: cover;
+}
 
 #container {
 	width: 980px;
