--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ p{
 	font-family: serif;
 }
 body{
-	background-image: url("images/background2.jpg");
+	background-image: url("background2.jpg");
 	background-size: cover;
 }
 
